Adicionada Página Prncipal e configuração de rotas

--- a/monhold/package.json
+++ b/monhold/package.json
@@ -1,29 +1,29 @@
 {
   "name": "monhold",
-  "title": "MonHold",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service electron:serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "start": "vue-cli-service electron:serve"
   },
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "^5.0.4",
     "@vue/cli-service": "~5.0.0",
     "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
@@ -54,5 +54,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "title": "MonHold"
 }
