--- a/monhold/package.json
+++ b/monhold/package.json
@@ -15,6 +15,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
+    "path-browserify": "^1.0.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
