--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -8,28 +8,13 @@ Build VueJS:
   stage: Build
   tags:
     - macos
+    - windows
+    - linux
   script:
     - npm install
     - npm run electron:build
   artifacts:
     paths:
       - dist_electron/
-  except:
-    - schedules
-
-
-CloudFlare Deploy:
-  stage: Deploy
-  tags:
-    - macos
-  environment:
-    name: Production front-end
-  variables:
-    PROJECT_NAME: monhold-front
-    TARGET: production
-  script:
-    - npx wrangler pages publish --project-name $PROJECT_NAME --branch $TARGET dist_electron/
-  only:
-    - main
   except:
     - schedules
