--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "monhold",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Tainara Pohren e Renê Zanette"
+  },
+  "description": "Sistema de Gestão Financeira",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,7 +14,10 @@
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "start": "vue-cli-service electron:serve"
+    "start": "vue-cli-service electron:serve",
+    "publish": "npm run electron:build -- -p always",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "main": "background.js",
   "dependencies": {
