--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "start": "vue-cli-service electron:serve",
     "publish": "npm run electron:build -- -p always",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder",
-    "buildlinux": "electron-builder --linux"
+    "dist": "electron-builder"
   },
   "main": "background.js",
   "dependencies": {
