--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,8 @@ jobs:
         node-version: 16
     - name: install dependencies
       run: npm install
+    - name: install snap
+      run: sudo snap install snapcraft --classic 
     - name: build
       run: npm run publish
       
