--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: snapcore/action-build@v1
     - uses: actions/setup-node@master
       with:
         node-version: 16
     - name: install dependencies
       run: npm install
-    - name: install snap
-      run: sudo snap install snapcraft --classic 
     - name: build        
       run: npm run publish
 
